--- a/OurProducts.html
+++ b/OurProducts.html
@@ -4,92 +4,7 @@
 <title>Our Products - Beauty Nest</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-}
-
-.header {
-  background-color: #f1f1f1;
-  padding: 20px;
-  text-align: center;
-}
-
-.header img {
-  width: 100px;
-  height: auto;
-  margin-bottom: 10px;
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: #941372;
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: rgb(145, 13, 110);
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 20px;
-}
-
-.product {
-  flex: 1 1 300px;
-  margin: 10px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  overflow: hidden;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-  text-align: center;
-  background: #fff;
-}
-
-.product img {
-  width: 100%;
-  height: 250px;
-  object-fit: cover;
-}
-
-.product h3 {
-  color: #941372;
-  margin: 10px 0;
-}
-
-.product p {
-  padding: 0 15px 15px;
-}
-
-.footer {
-  background-color: #f1f1f1;
-  padding: 10px;
-  text-align: center;
-}
-
-@media screen and (max-width: 600px) {
-  .row {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
