--- a/AboutUs.html
+++ b/AboutUs.html
@@ -4,132 +4,7 @@
     <title>About Us - Beauty Nest</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #fafafa;
-        }
-
-        /* Header styling */
-        .header {
-            background-color: #941372;
-            padding: 40px;
-            text-align: center;
-            color: white;
-        }
-
-        .header img {
-            width: 120px;
-            height: auto;
-            margin-bottom: 10px;
-        }
-
-        .header h1 {
-            font-size: 36px;
-            margin: 10px 0;
-        }
-
-        .header p {
-            font-size: 20px;
-            font-style: italic;
-            margin: 10px 0;
-        }
-
-        /* Navigation bar styling */
-        .topnav {
-            overflow: hidden;
-            background-color: #941372;
-        }
-
-        .topnav a {
-            float: left;
-            display: block;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 20px;
-            text-decoration: none;
-        }
-
-        .topnav a:hover {
-            background-color: #ddd;
-            color: #941372;
-        }
-
-        /* Section styling */
-        .about-section {
-            background-color: #ffffff;
-            padding: 40px;
-            margin: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .about-section h2 {
-            font-size: 32px;
-            color: #941372;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .about-section p {
-            font-size: 18px;
-            line-height: 1.6;
-            color: #555;
-        }
-
-        .about-section ul {
-            list-style-type: none;
-            padding: 0;
-            margin-top: 20px;
-        }
-
-        .about-section ul li {
-            font-size: 18px;
-            margin: 10px 0;
-        }
-
-        .about-section .quote {
-            background-color: #f8f8f8;
-            padding: 20px;
-            font-size: 20px;
-            font-style: italic;
-            text-align: center;
-            border-radius: 8px;
-            color: #941372;
-            margin-top: 40px;
-        }
-
-        /* Responsive layout for smaller screens */
-        @media screen and (max-width: 768px) {
-            .header h1 {
-                font-size: 30px;
-            }
-
-            .topnav a {
-                padding: 12px 16px;
-            }
-
-            .about-section {
-                margin: 10px;
-            }
-        }
-
-        /* Footer styling */
-        .footer {
-            background-color: #941372;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
