--- a/ContactUs.html
+++ b/ContactUs.html
@@ -4,80 +4,7 @@
 <title>Contact Us - Beauty Nest</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-}
-
-.header {
-  background-color: #f1f1f1;
-  padding: 20px;
-  text-align: center;
-}
-
-.header img {
-  width: 100px;
-  height: auto;
-  margin-bottom: 10px;
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: #941372;
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: rgb(145, 13, 110);
-}
-
-.container {
-  padding: 20px;
-}
-
-.contact-info {
-  margin-bottom: 20px;
-}
-
-.contact-info h2 {
-  color: #941372;
-}
-
-.contact-info p {
-  margin: 5px 0;
-}
-
-.map-container {
-  margin-top: 20px;
-}
-
-.footer {
-  background-color: #f1f1f1;
-  padding: 10px;
-  text-align: center;
-}
-
-/* Responsive map */
-.map-container iframe {
-  width: 100%;
-  height: 400px;
-  border: 0;
-}
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
